[gd_scene load_steps=5 format=3 uid="uid://ojh1giju3pr5"]

[ext_resource type="Script" uid="uid://uu13xq0eeskc" path="res://scripts/game_over_menu.gd" id="1_6ebp1"]
[ext_resource type="AudioStream" uid="uid://dwpm3neaongw7" path="res://assets/audio/sfx/button_click.wav" id="2_cwb3k"]
[ext_resource type="Texture2D" uid="uid://chnmi6gs2pfb2" path="res://assets/textures/button_texture/restart_button.png" id="3_81acl"]
[ext_resource type="Texture2D" uid="uid://cqmw702ayrbk5" path="res://assets/textures/button_texture/quit_button.png" id="4_7u104"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6ebp1")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_cwb3k")
volume_db = 12.0

[node name="LabelContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.5
offset_top = -109.0
offset_right = 44.5
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Game over!"

[node name="ScoreLabel" type="Label" parent="LabelContainer"]
layout_mode = 2
text = "Score:"

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.5
offset_top = -33.0
offset_right = 84.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = " "
icon = ExtResource("3_81acl")
flat = true
icon_alignment = 1
expand_icon = true

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
text = " "
icon = ExtResource("4_7u104")
flat = true
icon_alignment = 1
expand_icon = true
